# pdf-imposer

./: .gitignore  LICENSE  README.md  REQUIREMENTS.md  SPECIFICATION.md  pyproject.toml
.github/workflows/: ci.yml
src/pdf_imposer/: __init__.py  booklet.py  booklet_pdf.py  cli.py  crop.py
tests/: __init__.py  test_booklet.py
